--- a/src/css/style.css
+++ b/src/css/style.css
@@ -28,7 +28,7 @@
   }
   
   section {
-    @apply mt-1 lg:ml-96 flex flex-col gap-10 justify-center items-center h-screen;
+    @apply mt-1 lg:ml-96 flex flex-col gap-10 justify-center items-center min-h-screen;
   }
 
   section a {
@@ -107,6 +107,10 @@
 
   .timeline__item time {
     @apply font-display text-lg font-bold;
+  }
+
+  .section__projects {
+    @apply md:last:py-12;
   }
 
   .section__project {
